[package]
name = "relay-server"
version = "0.1.0"
edition = "2024"

[dependencies]
renet_netcode = "1.2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
thiserror = "2.0.17"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
renet = "1.2.0"
axum = "0.8.7"
