[package]
name = "relay-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
thiserror = "2.0.17"
log = "0.4.28"
rand = "0.9.2"
paperudp = { git = "https://github.com/curtjs/paperudp.git" }
