[package]
name = "relay-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nodetunnel-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3+spec-1.1.0"
thiserror = "2.0.17"
rand = "0.10.2"
paperudp = { git = "https://github.com/curtjs/paperudp.git" }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
reqwest = { version = "0.13.4", features = ["json"] }
envy = "0.4.2"
dotenvy = "0.15.7"
